src/objects/SPE2_Survey_Respondents__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SPE2_Survey_Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsResponseReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsResponseReceived?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>SPE2Survey__c</referenceTo>
        <relationshipLabel>Survey Respondent</relationshipLabel>
        <relationshipName>SPE2_Survey_Respondents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Respondent</label>
    <nameField>
        <displayFormat>RDI-{00000}</displayFormat>
        <label>Respondents Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Respondent</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>